--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-blog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Tatsuohggggg.github.io./TatsuohBlog",
+  "homepage": "https://Tatsuohggggg.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
